# cloudpilot

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  setup.py
.hypothesis/constants/: 00fa6feb89b60692  0d441fe0fe3fb29a  15178425d9750457  21c135de524115b6  240ec63b269dbd77  2a728188a36a8a00  303600f2cf489325  31237ff3b76e109f  33acfd3ddf7509a5  3c465666a7cdb3d6  3ee73928fc9d2b64  41f9f05eb7b2ef51  49641f63671757d4  49f7546b4c283d4c  4a614cb694cc7ca5  4b0391876c3abce7  5035e288b6a97724  52724843da4087e0  5371bacc607ffb6f  5932ec3b48ad07d6  6ea762034a8f8f71  7db9bfdddc4d46fa  813f7f748e6c7a7d  86656ea17a086a78  8669ce8f1e0ab45b  8d3b1276919206f1  98eb47083aea67c9  9f874038c847fafa  a5ea091cbb7e6d88  a6f114b62bd8da29  b84f1f967be93820  bc23dd98f222108c  bd56d7449d98c3d4  c2c1f268a2ec32e7  cacc5055f45d09f2  cf6c001d47a75729  d4073b0b50cecc6c  d7f7df552f33a84d  df0b9e66068495a1  df919ca88187da93  (+2 more)
cloudpilot/: __init__.py  aws_client.py  cli.py  core.py  mcp_server.py
cloudpilot/agent/: __init__.py  local_memory.py  loop.py  memory.py  memory_hook.py  session_context.py  strands_agent.py  tool_executor.py  tools.py  web_search.py
cloudpilot/dashboard/: guardrails.py  jobs.py  remediation.py  security.py  server.py
cloudpilot/monitoring/: __init__.py  history.py  notifications.py  realtime.py  (+1 more)
tests/: conftest.py  strategies.py  test_backup_dr_properties.py  test_core.py  test_drift_properties.py  test_eks_properties.py  test_monitoring.py  test_network_properties.py  test_realtime.py  test_secrets_properties.py  test_tool_executor.py
(+40 files in other folders)
